<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEE5E0"
    tools:context=".activity.TranslateActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:id="@+id/progressBar"
        app:layout_constraintBottom_toTopOf="@+id/output_textview"
        app:layout_constraintEnd_toEndOf="@+id/input_edit_text"
        app:layout_constraintStart_toStartOf="@+id/input_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_text" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/translator_background" />

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="-100dp"
        android:background="@drawable/fill_rounded_corner"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="text|textMultiLine"
        android:padding="12dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="English:"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/input_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_edit_text" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vietnamese:"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/output_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/output_textview" />

    <TextView
        android:id="@+id/output_textview"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@drawable/fill_rounded_corner"
        android:gravity="start|top"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_edit_text"
        app:layout_constraintStart_toStartOf="@+id/input_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_text" />

    <Button
        android:id="@+id/translate_btn"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:background="@drawable/translator_arrow"
        android:gravity="center"
        android:padding="0dp"
        android:rotation="90"
        android:text="Translate"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/output_textview"
        app:layout_constraintEnd_toEndOf="@+id/input_edit_text"
        app:layout_constraintStart_toStartOf="@+id/input_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_text"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>